alignment fix

--- a/ui/src/components/whereclause/index.css
+++ b/ui/src/components/whereclause/index.css
@@ -5,4 +5,5 @@
 
 .where-clause-text {
     margin-left: 10px;
+    margin-right: 7px;
 }
